test/Fail/Issue2808.err
Issue2808.agda:6,1-18: error: [GenericError]
Illegal declaration(s) before top-level module
